Changelog
=========

0.2 - unreleased
----------------


0.1 - 2010-10-05
----------------

- Initial release